NXBT: Adding script to deploy artifacts into maven - fix mvn option